# rust_auth

./: .gitignore  Cargo.toml  PLAN.md  README.md  deny.toml
.github/workflows/: audit.yml  ci.yml  security-scan.yml
docs/reference-components/: Cargo.toml.reference  README.md  app.rs  middleware.rs
docs/reference-components/auth/: cookie.rs  email.rs  error.rs  jobs.rs  logout.rs  magic_link.rs  mod.rs  repo.rs  session.rs  tokens.rs  verify_token.rs
docs/reference-migrations/: 20260424214126_init.down.sql  20260424214126_init.up.sql  20260424214127_create_schema.down.sql  20260424214127_create_schema.up.sql  README.md
docs/superpowers/plans/: 2026-05-01-auth-rust-implementation.md
docs/superpowers/specs/: 2026-05-01-magic-link-auth-library-design.md
examples/: axum.rs
migrations/: 001_helpers.up.sql  003_magic_links.down.sql  004_sessions.up.sql  005_verify_attempts.down.sql  005_verify_attempts.up.sql  20260501000000_auth_init.down.sql  20260501000000_auth_init.up.sql  20260513000000_magic_links_live_code_index.down.sql  20260513000000_magic_links_live_code_index.up.sql  auth_001_helpers.down.sql  auth_002_users.up.sql  auth_003_magic_links.up.sql
src/: lib.rs
src/core/: config.rs  cookie.rs  email.rs  error.rs  identity.rs  mod.rs  policy.rs  tokens.rs  traits.rs  user.rs
src/providers/: google.rs  mod.rs
src/store/: cleanup.rs  hash.rs  identity.rs  issue.rs  mod.rs  pad.rs  session.rs  user.rs  verify.rs
tests/: cleanup.rs  google_real_token.rs  google_verifier.rs  identity_login.rs  issue.rs  migrate.rs  session_lifecycle.rs  verify_code.rs  verify_rate_limit.rs  verify_token.rs
tests/common/: mod.rs
