[package]
name = "auth_rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Reusable passwordless auth library: magic-link + 6-digit code with sessions on Postgres"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zygmunt-pawel/rust_auth"
authors = ["Paweł Zygmunt"]

[dependencies]
async-trait = "=0.1.89"
base64 = "=0.22.1"
chrono = { version = "=0.4.44", features = ["serde"] }
hmac = "=0.12.1"
rand = "=0.9.4"
secrecy = { version = "=0.10.3", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
sha2 = "=0.10.9"
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "uuid", "chrono", "ipnetwork"] }
subtle = "=2.6.1"
thiserror = "=2.0.18"
tokio = { version = "=1.52.1", features = ["time"] }
tracing = "=0.1.44"
uuid = { version = "=1.23.1", features = ["v7", "serde"] }

[dev-dependencies]
anyhow = "=1.0.102"
axum = "=0.8.9"
tokio = { version = "=1.52.1", features = ["full", "test-util"] }
serde_json = "=1.0.149"
http = "=1.4.0"
http-body-util = "=0.1.3"
tower = { version = "=0.5.3", features = ["util"] }
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
